--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-regex = "1.5"
+pest = "2"
+pest_derive = "2"
 nom = "7"
+
+[dev-dependencies]
+criterion = { version = "0.3", features = ["html_reports"] }
+
+[[bench]]
+name = "compare"
+harness = false
